src/snapshots/sqlc__test__select___const__basic.snap
---
source: src/test.rs
expression: rs
---
pub struct ARows {
    pub _1: i32,
}
pub async fn a(
    c: &impl tokio_postgres::GenericClient,
) -> Result<Vec<ARows>, tokio_postgres::Error> {
    c.query("SELECT 1", &[])
        .await
        .map(|rs| { rs.into_iter().map(|r| ARows { _1: r.get(0) }).collect() })
}
